--- a/package.json
+++ b/package.json
@@ -1,18 +1,20 @@
 {
     "private": true,
     "scripts": {
-        "dev": "npm run development",
-        "development": "mix",
-        "watch": "mix watch",
-        "watch-poll": "mix watch -- --watch-options-poll=1000",
-        "hot": "mix watch --hot",
-        "prod": "npm run production",
-        "production": "mix --production"
+        "dev": "vite",
+        "build": "vite build"
     },
     "devDependencies": {
+        "@popperjs/core": "^2.10.2",
         "axios": "^0.25",
-        "laravel-mix": "^6.0.6",
+        "bootstrap": "^5.1.3",
+        "laravel-mix": "^6.0.49",
+        "laravel-vite-plugin": "^0.5.3",
         "lodash": "^4.17.19",
-        "postcss": "^8.1.14"
+        "node-sass": "^7.0.1",
+        "postcss": "^8.1.14",
+        "sass": "^1.32.11",
+        "sass-loader": "^13.0.2",
+        "vite": "^3.0.7"
     }
 }
